pricing mobile margin fixed height no longer clipped

--- a/css/style.css
+++ b/css/style.css
@@ -1233,7 +1233,7 @@ iframe {
   }
 
   .pricing-card {
-    height: 85%;
-    width: 90%;
+    height: auto;
+    margin: 0 auto;
   }
 }
